--- a/styles2.css
+++ b/styles2.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(images/2eme\ page.jpg);
+    background-image: url(2eme\ page.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -46,7 +46,7 @@ footer{
    
 
     body {
-        background-image: url(images/2eme\ page.jpg);
+        background-image: url(2eme\ page.jpg);
         background-repeat: no-repeat;
         background-size: cover;
        
