--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ footer{
         box-sizing: border-box;
     }
     body{
-        background-image: url(images/1page.jpg);
+        background-image: url(1page.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
