--- a/styles3.css
+++ b/styles3.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(3eme\ page.jpg);
+    background-image: url(images/3eme\ page.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -59,7 +59,7 @@ h4 {
 }
 
 .titre-present {
-    margin-left: 480px;
+    margin-left: 345px;
     margin-top: 20px;
     padding-right: 20px;
 }
@@ -90,4 +90,74 @@ footer{
     font-size: 64px;
     margin-left: 50px;
     color: black;
+}
+@media screen and (max-width: 600px){
+
+   
+
+body {
+    background-image: url(images/2eme\ page.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 714px;
+}
+
+.titres {
+    margin-left: 5px;
+
+}
+
+.prenom {
+    background-color: rgb(143, 209, 235);
+    width: 250px;
+    font-size: 20px;
+    padding: 15px;
+    margin-left: 20px;
+    margin-bottom: 25px;
+
+}
+
+.mail {
+    background-color: rgb(143, 209, 235);
+    width: 250px;
+    font-size: 20px;
+    margin-bottom: 20px;
+    padding: 15px;
+    margin-left: 20px;
+}
+
+.titre-present {
+    margin-left: 5px;
+    margin-top: 20px;
+    padding-right: 20px;
+}
+
+.present {
+    margin-top: 25px;
+    background-color: rgb(143, 209, 235);
+    font-size: 20px;
+    width: 217px;
+    margin-left: 20px;
+    font-size: 20px;
+}
+
+.envoyer {
+    background-color: rgb(143, 209, 235);
+    width: 130px;
+    font-size: 20px;
+    margin-top: 45px;
+    margin-left: 107px;
+}
+
+}
+
+
+@media screen and (min-width: 750px) {
+   
+    body {
+        background-image: url(images/1page.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 714px;}
 }
