--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(1page.jpg);
+    background-image: url(https://github.com/Amelie-lrch/invitation/blob/main/1page.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
