--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-/*--1er PAGE--*/
 *{
     
     box-sizing: border-box;
 }
 body{
-    background-image: url(https://github.com/Amelie-lrch/invitation/blob/main/1page.jpg);
+    background-image: url(images/1page.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
