--- a/styles2.css
+++ b/styles2.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(2eme\ page.jpg);
+    background-image: url(images/2eme\ page.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
