--- a/styles3.css
+++ b/styles3.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(3eme\ page.jpg);
+    background-image: url(images/3eme\ page.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
