--- a/styles3.css
+++ b/styles3.css
@@ -17,22 +17,30 @@ body{
     margin-bottom: 30px;
     
     }
-.prenom { 
+.prenom {
     background-color: rgb(143, 209, 235);
-    width: 250px;
+    width: 200px;
     font-size: 20px;
-    padding: 15px;
-   margin-left: 530px;
-   margin-bottom: 25px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 530px;
+    height: 50px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
 }
 
 .mail {
     background-color: rgb(143, 209, 235);
-    width: 250px;
+    width: 200px;
     font-size: 20px;
-    margin-bottom: 20px;
-    padding: 15px;
+    font: message-box;
+    padding: 10px;
     margin-left: 530px;
+    height: 50px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
 }
 
 h4 {
@@ -41,14 +49,15 @@ h4 {
 }
 
 .titre-nombre {
-     margin-left: 480px;
      margin-top: 20px;
-     padding-right: 20px;
+     float: left;
 }
 
 .nombre  {
-   margin-top:30px ;
+   float: right;
    background-color: rgb(143, 209, 235);
+  margin-right: 540px;
+  margin-top: 30px;
   font-size: 15px;
 }
 
@@ -65,15 +74,40 @@ h4 {
 }
 
 .envoyer {
+        background-color: rgb(143, 209, 235);
+        width: 130px;
+        font-size: 20px;
+        margin-top: 20px;
+        margin-left: 670px;
+        border: black;  
+        border-radius : 15px;
+    
+    }
+
+    .couleur {
+        margin-left: 38px;
+        margin-top: -88px;
+        font-size: 18px;
+    }
+
+    .imgcouleur {
+        width: 10%;
+       margin-left: 95px;
+        margin-top: -45px;
+    }
+
+.mess {
     background-color: rgb(143, 209, 235);
-    width: 130px;
+    width: 350px;
     font-size: 20px;
-    margin-top: 80px;
-   
+    font: message-box;
+    padding: 10px;
+    margin-left: 450px;
+    height: 100px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
 }
-
-
-
 
 
 /*--FOOTER--*/
