--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*--1er PAGE--*/
 *{
     
     box-sizing: border-box;
@@ -58,7 +59,7 @@ footer{
     p {
         font-size: 30px;
         margin-right: 10px;
-        margin-top: 72px;
+        margin-top: 52px;
     }
     
     
@@ -93,5 +94,44 @@ footer{
         background-size: cover;
         background-position: center;
         height: 714px;
+}
+}
+
+@media screen and (min-width: 760px) and (max-width:1060px){
+.couple {
+    width: 42%;
+    margin-top: 30px;
+}
+
+p {
+    float: right;
+    text-align: center;
+    font-size: 32px;
+    margin-right: 250px;
+    margin-top: -5px;
+}
+
+}
+
+@media screen and (min-width: 1020px) and (max-width:1260px) {
+
+body {
+    background-image: url(images/1page.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 769px;
+}
+p {
+    float: right;
+    text-align: center;
+    font-size: 32px;
+    margin-right: 315px;
+    margin-top: 470px;
+}
+
+.couple {
+    width: 42%;
+    margin-top: 152px;
 }
 }
