--- a/styles3.css
+++ b/styles3.css
@@ -130,33 +130,44 @@ footer{
    
 
 body {
-    background-image: url(images/2eme\ page.jpg);
+    background-image: url(images/3eme\ page.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 714px;
 }
 
 .titres {
-    margin-left: 5px;
+    margin-left: 46px;
+    margin-top: 28px;
+    font-size: 35px
 
 }
-
 .prenom {
     background-color: rgb(143, 209, 235);
-    width: 250px;
-    font-size: 20px;
-    padding: 15px;
+    width: 217px;
+    font-size: 13px;
+    padding: 10px;
     margin-left: 20px;
-    margin-bottom: 25px;
-
+    margin-bottom: -9px;
+    height: 29px;
 }
 
 .mail {
     background-color: rgb(143, 209, 235);
+    width: 216px;
+    font-size: 16px;
+    margin-bottom: -21px;
+    padding: 11px;
+    margin-left: 20px;
+    height: 17px;
+}
+
+.mess {
+    background-color: rgb(143, 209, 235);
     width: 250px;
-    font-size: 20px;
+    font-size: 13px;
     margin-bottom: 20px;
-    padding: 15px;
+    padding: 11px;
     margin-left: 20px;
 }
 
@@ -180,8 +191,21 @@ body {
     width: 130px;
     font-size: 20px;
     margin-top: 45px;
-    margin-left: 107px;
+    margin-left: 182px;
 }
+
+.imgcouleur {
+    width: 10%;
+    margin-left: 279px;
+    margin-top: -147px;
+    margin-bottom: 56px;
+}
+
+    .couleur {
+        margin-top: -70px;
+    }
+
+
 
 }
 
@@ -189,9 +213,254 @@ body {
 @media screen and (min-width: 750px) {
    
     body {
-        background-image: url(images/1page.jpg);
+        background-image: url(images/3eme\ page.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         height: 714px;}
+}
+@media screen and (min-width: 370px) and (max-width:420px){
+.mess {
+    background-color: rgb(143, 209, 235);
+    width: 250px;
+    font-size: 13px;
+    margin-bottom: 69px;
+    padding: 11px;
+    margin-left: 20px;
+}
+
+.imgcouleur {
+    width: 10%;
+    margin-left: 285px;
+    margin-top: -151px;
+    margin-bottom: 72px;
+}
+
+}
+@media screen and (min-width: 760px) and (max-width:1060px) {
+    .titres {
+        margin-left: 271px;
+        margin-top: -42px;
+        font-size: 40px;
+        margin-bottom: 30px;
+    }
+.prenom {
+    background-color: rgb(143, 209, 235);
+    width: 200px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 284px;
+    height: 50px;
+    border-radius: 16px;
+    margin-top: 1px;
+    border: black;
+}
+
+.mail {
+    background-color: rgb(143, 209, 235);
+    width: 200px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 286px;
+    height: 50px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
+}
+
+.mess {
+    background-color: rgb(143, 209, 235);
+    width: 350px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 219px;
+    height: 100px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
+}
+
+.envoyer {
+    background-color: rgb(143, 209, 235);
+    width: 130px;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-left: 435px;
+    border: black;
+    border-radius: 15px;
+}
+.couleur {
+    margin-left: 218px;
+    margin-top: 57px;
+    font-size: 18px;
+}
+.imgcouleur {
+    width: 10%;
+    margin-left: 12px;
+    margin-top: 31px;
+}
+}
+
+@media screen and (min-width: 760px) and (max-width:1060px) {
+
+.prenom {
+    background-color: rgb(143, 209, 235);
+    width: 200px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 298px;
+    height: 50px;
+    border-radius: 16px;
+    margin-top: 1px;
+    border: black;
+    margin-bottom: 51px;
+}
+
+.mail {
+    background-color: rgb(143, 209, 235);
+    width: 200px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: -207px;
+    height: 50px;
+    border-radius: 16px;
+    margin-top: 17px;
+    border: black;
+}
+
+.mess {
+    background-color: rgb(143, 209, 235);
+    width: 408px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 219px;
+    height: 188px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
+}
+
+.imgcouleur {
+    width: 8%;
+    margin-left: 12px;
+    margin-top: 59px;
+}
+
+
+
+}
+@media screen and (min-width: 1020px) and (max-width:1460px) {
+
+body {
+    background-image: url(images/3eme\ page.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 830px;
+}
+.couleur {
+    margin-left: 218px;
+    margin-top: 85px;
+    font-size: 18px;
+}
+.prenom {
+    background-color: rgb(143, 209, 235);
+    width: 285px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 308px;
+    height: 55px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
+    font-size: 26px;
+    margin-bottom: 10px;
+}
+.mail {
+    background-color: rgb(143, 209, 235);
+    width: 470px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 249px;
+    height: 50px;
+    border-radius: 16px;
+    margin-top: 20px;
+    font-size: 23px;
+    border: black;
+}
+.mess {
+    background-color: rgb(143, 209, 235);
+    width: 559px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 201px;
+    height: 182px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
+    font-size: 25px;
+}
+
+}
+@media screen and (min-width: 1430px) and (max-width:1560px){
+.prenom {
+    background-color: rgb(143, 209, 235);
+    width: 285px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 530px;
+    height: 71px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
+    font-size: 32px;
+}
+.mail {
+    background-color: rgb(143, 209, 235);
+    width: 470px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 474px;
+    height: 65px;
+    border-radius: 16px;
+    margin-top: 20px;
+    font-size: 32px;
+    border: black;
+}
+.mess {
+    background-color: rgb(143, 209, 235);
+    width: 559px;
+    font-size: 20px;
+    font: message-box;
+    padding: 10px;
+    margin-left: 450px;
+    height: 182px;
+    border-radius: 16px;
+    margin-top: 20px;
+    border: black;
+    font-size: 26px;
+}
+.titres {
+    margin-left: 545px;}
+    .imgcouleur {
+        width: 9%;
+        margin-left: 25px;
+        margin-top: 93px;
+    }
+    .couleur {
+        margin-left: 457px;
+        margin-top: 139px;
+        font-size: 27px;
+    }
 }
