--- a/styles.css
+++ b/styles.css
@@ -61,11 +61,10 @@ footer{
     }
     
     p {
-        font-size: 30px;
-        margin-right: 10px;
-        margin-top: 52px;
+        font-size: 39px;
+        margin-right: 76px;
+        margin-top: 67px;
     }
-    
     
     .couple {
         width: 200px;
@@ -137,3 +136,74 @@ p {
 
 }
 
+@media screen and (min-width: 350px) and (max-width:400px) {
+
+    
+body {
+    background-image: url(images/1page.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 860px ;
+}
+}
+
+@media screen and (min-width: 400px) and (max-width:570px) {
+    body {
+        background-image: url(images/1page.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 975px ;
+    }
+
+}
+
+@media screen and (min-width: 280px) and (max-width:350px) {
+    body {
+        background-image: url(images/1page.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 720px ;
+    }
+
+    .couple {
+        width: 66%;
+        margin-top: 154px;
+        margin-left: 42px;
+    }
+
+    p {
+        font-size: 25px;
+        margin-right: 50px;
+        margin-top: 62px;
+    }
+
+}
+
+
+@media screen and (min-width: 750px) and (max-width:900px) {
+    body {
+        background-image: url(images/1page.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 1190px ;
+    }
+
+    .couple {
+        width: 60%;
+        margin-top: 154px;
+        margin-left: 77px;
+        float: none;
+    }
+
+    p {
+        font-size: 43px;
+        margin-right: 10px;
+        margin-top: 62px;
+        float: none;
+    }
+
+}
